--- a/development/frontend/src/pages/css/Login.css
+++ b/development/frontend/src/pages/css/Login.css
@@ -1,12 +1,11 @@
 .app {
-  font-family: sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 20px;
   height: 100vh;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", sans-serif;
   background-color: #f8f9fd;
 }
 
