--- a/development/frontend/src/components/place/list/placeCard.css
+++ b/development/frontend/src/components/place/list/placeCard.css
@@ -3,6 +3,7 @@
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
+  height: 32vmin;
 }
 .picture {
   border: 3px solid rgb(255, 0, 0);
@@ -14,7 +15,8 @@
 }
 .previewPicture {
   border-radius: 20px 0 0 20px;
-  height: 25vmin;
+  height: 29vmin;
+  width: 15vmin;
   position: relative;
 }
 .info {
