--- a/development/frontend/src/pages/place/css/List.css
+++ b/development/frontend/src/pages/place/css/List.css
@@ -2,8 +2,8 @@
   border: 3px solid black;
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  height: 170vmin;
+  align-items: flex-start;
+  height: 100%;
   padding-top: 2%;
   padding-bottom: 2%;
   padding-left: 5%;
@@ -12,20 +12,22 @@
 
 .categoryContainer {
   border: 3px solid rgb(255, 204, 0);
+  position: sticky;
+  top: 5vmin;
   width: 20%;
-  height: 100%;
+  height: 70vmin;
 }
 
 .placeContainer {
   border: 3px solid rgb(0, 183, 255);
   width: 75%;
-  height: 100%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.orderContainer {
+.searchBarContainer {
   border: 3px solid rgb(255, 213, 0);
   height: 10%;
 }
