--- a/development/frontend/src/pages/place/css/Map.css
+++ b/development/frontend/src/pages/place/css/Map.css
@@ -32,24 +32,34 @@
 }
 
 .previewPlaceCard {
-  /* border: 3px solid black; */
+  border: 3px solid black;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   border-radius: 20px;
   position: absolute;
   width: 300px;
-  height: 30vmin;
-  top: 11%;
+  height: 33vmin;
   left: 3%;
+  z-index: 10000;
 }
 
 .cardSection {
-  /* border: 2px solid black; */
+  border: 2px solid black;
   border-radius: 20px;
 }
 
 .previewPicture2 {
   border-radius: 20px;
   height: 21vmin;
+}
+
+.closeCardButton {
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 10%;
+  left: 97%;
+  width: 2vmin;
 }
