--- a/development/frontend/src/pages/pet/css/GrowTree.css
+++ b/development/frontend/src/pages/pet/css/GrowTree.css
@@ -1,21 +1,57 @@
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 600px) {
+  .growTreePageContainer {
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+  }
+
   .treeContainer {
+    border: 3px solid rgb(0, 174, 255);
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    padding: 10vmin 0 10vmin 0;
+    width: 100%;
+
+    background-image: url("/src/assets/256.png");
+    background-repeat: repeat-y;
+    background-position: center;
+
+    font-size: 3vmax;
   }
 
-  .eachPhoto {
-    border: 3px solid black;
-    height: 25vmin;
+  .leftPhoto {
     display: flex;
+    justify-content: flex-start;
   }
 
   .left {
-    border: 3px solid rgb(255, 187, 0);
-    width: 25vmin;
-    position: sticky;
-    right: 0px;
+    border: lightgoldenrodyellow;
+    width: 100%;
+  }
+
+  .leftPhoto img {
+    border: 3px solid red;
+    position: relative;
+    border-radius: 500px;
+    left: 3%;
+    top: 0px;
+    width: 35vmin;
+    height: 35vmin;
+
+    background-image: url("/src/assets/dogEar.jpg");
+  }
+
+  .rightPhoto {
+    border: 3px solid rgb(255, 191, 0);
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .rightPhoto img {
+    position: relative;
+    border-radius: 500px;
+    right: 3%;
+    width: 35vmin;
+    height: 35vmin;
   }
 }
