--- a/development/frontend/src/pages/pet/css/UserProfile.css
+++ b/development/frontend/src/pages/pet/css/UserProfile.css
@@ -1,9 +1,17 @@
-.petprofile{
-    width: 70%;
-    height: 15%;
-    border: 3px solid black;
+.pet-profile-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
-.peticon{
+.pet-profile{
+    width: 80vw;
+    height: 20vh;
+    border: 3px solid black;
+    margin: 10px;
+    border-radius: 10px;
+}
+.pet-icon{
     border-radius: 50%;
     width: 300px;
     height: 300px;
