finish comment feature without css

--- a/development/frontend/src/pages/comment/css/comment.css
+++ b/development/frontend/src/pages/comment/css/comment.css
@@ -1,6 +1,13 @@
-.div {
+* {
     text-decoration: none
 }
-.card {
-    border: 1px solid black;
+.comment-card { 
+    margin: 5% 10%;
+    border: 1px solid red;
+    display: flex;
+    justify-content: space-between;
+}
+
+.comment-image {
+    
 }
