--- a/development/frontend/src/components/Footer.css
+++ b/development/frontend/src/components/Footer.css
@@ -1,17 +1,19 @@
-.footerContainer {
-  background: white;
-  border-top: 3px solid rgb(0, 0, 0);
-  display: flex;
-  justify-content: space-evenly;
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
-  width: 100%;
-  height: 10%;
-  padding: 2vmin 0 2vmin 0;
-  z-index: 1000;
-}
 
-.button {
-  height: 15vmin;
+
+@media only screen and (min-width: 821px) {
+  .footerContainer {
+    background: white;
+    border-top: 3px solid rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-evenly;
+
+    width: 820px;
+    height: 10%;
+    padding: 2vmin 0 2vmin 0;
+    z-index: 1000;
+  }
+  
+  .button {
+    height: 15vmin;
+  }
 }
