--- a/development/frontend/src/pages/comment/css/comment.css
+++ b/development/frontend/src/pages/comment/css/comment.css
@@ -3,15 +3,16 @@
 }
 
 body {
-  background-color: #f8f8f8;
+  background-color: #f7f1f0;
 }
 
 .comment-button-area > button {
   background-color: #f2968f;
   color: #fcfcfc;
-  border-radius: 6px;
+  border-radius: 16px;
   border: 1px solid rgba(0, 0, 0, 0.08);
-  margin: 2px;
+  margin: 3px;
+  height: 35px;
 }
 
 .comment-button-area > button:hover {
@@ -26,6 +27,7 @@ body {
 .comment-card-container {
   margin: 5% 10%;
   height: 15vh;
+  background-color: #F8F8F8;
   border: 1px solid #eee;
   box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
   border-radius: 15px;
@@ -64,7 +66,20 @@ body {
   align-items: flex-start;
 }
 
+.comment-detail >div {
+    display: flex;
+    text-align: start;;
+    flex-direction: column;
+    align-items:flex-start;
+}
+
+.comment-detail >div:nth-child(1){
+    padding: 8px 0 ;
+    font-weight: bold;;
+}
+
 .comment-detail-user {
+    margin: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -74,14 +89,14 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
 }
 
 .comment-detail-button {
   display: flex;
   flex-direction: row;
-  margin: 10px;
+  margin: 10px 0px;
 }
 
 .comment-edit-button {
