--- a/development/frontend/src/pages/user/css/UserProfile.css
+++ b/development/frontend/src/pages/user/css/UserProfile.css
@@ -1,3 +1,14 @@
+.user-card{
+    width: 90vw;
+    height: 15vh;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 4vmin;
+}
+.username{
+    font-size: 10vmin;
+    margin: 8vmin;
+}
 .pet-profile-container{
     display: flex;
     flex-direction: column;
@@ -12,6 +23,30 @@
     border-radius: 15px;
     display: flex;
     flex-direction: row;
+    color: black;
+}
+.pet-name,.pet-age{
+    font-size: 8vmin;
+    margin: 1vmin;
+}
+.add-pet{
+    margin: 15px;
+    width: 80vw;
+    height: 15vh;
+    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+}
+.plus{
+    font-size: 25vmin;
+    padding: 3vmin;
+    color: gray;
+}
+.user-icon{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
 }
 .pet-icon{
     border-radius: 50%;
@@ -28,7 +63,9 @@
     width: 60%;
     padding: 2%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
+    /* flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: flex-start; */
   }
