--- a/development/frontend/src/components/Header.css
+++ b/development/frontend/src/components/Header.css
@@ -1,19 +1,8 @@
-.headerContainer {
-  border: 3px solid rgb(0, 0, 0);
-  background: white;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  position: sticky;
-  top: 0px;
-  height: 10vmin;
-  width: 100%;
-  z-index: 1000;
-}
-
-.username {
-  font-size: 5vmin;
-  height: 100%;
-  display: flex;
-  align-items: flex-start;
+@media only screen and (min-width: 821px) {
+  .header {
+    border: 2px solid rgb(255, 0, 144);
+    height: 4%;
+    position: relative;
+    top: 0;
+  }
 }
