--- a/development/frontend/src/components/Footer.css
+++ b/development/frontend/src/components/Footer.css
@@ -1,31 +1,8 @@
 @media only screen and (min-width: 821px) {
-  body {
-    display: flex;
-    justify-content: center;
-  }
-
-  .footerContainer {
-    background: white;
-    border: 2px solid rgb(255, 196, 0);
-    display: flex;
-    justify-content: space-evenly;
-    position: sticky;
-    bottom: 0px;
-    width: 820px;
-    height: 1%;
-    padding: 2vmin 0 2vmin 0;
-    z-index: 1000;
-  }
-
-
-  .button, .button:hover, .button.active {
-    background-color: rgb(255, 255, 255) !important;
-    box-shadow: 0px 0px 0px 0px rgb(0 0 0 / 0%)!important;
-    font-size: 5vmin !important;
-    width: 12vmin;
-    height: 7vmin;
-    fill: none !important;
-    stroke: none !important;
-    color: white !important;
+  .footer {
+    border: 2px solid rgb(255, 247, 0);
+    height: 4%;
+    position: relative;
+    bottom: 0;
   }
 }
