--- a/development/frontend/src/pages/place/css/List.css
+++ b/development/frontend/src/pages/place/css/List.css
@@ -1,4 +1,4 @@
-.pageContainer {
+/* .pageContainer {
   border: 3px solid black;
   display: flex;
   justify-content: space-around;
@@ -44,4 +44,61 @@
   border: 3px solid rgb(255, 0, 0);
   height: 85%;
   overflow: scroll;
+} */
+@media only screen and (min-width: 821px) {
+  .listPageContainer {
+    height: 1080px;
+    width: 820px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .listContentContainer {
+    border: 2px solid rgb(0, 195, 255);
+    height: 84%;
+    display: flex;
+    justify-content: space-around;
+    padding: 0 2% 0 2%;
+  }
+
+  .listCategoryContainer {
+    border: 2px solid red;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .listPagePlaceContainer {
+    border: 4px solid rgb(0, 160, 3);
+    height: 100%;
+    width: 65%;
+    overflow: scroll;
+  }
+
+  .listDistrictCategory {
+    border: 3px solid rgb(255, 187, 0);
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 15%;
+    position: relative;
+    top: 0;
+  }
+
+  .mantine-33vjzt {
+    margin-right: 20px;
+  }
+
+  .listTypeCategory {
+    border: 3px solid rgb(0, 179, 255);
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 15%;
+    position: relative;
+    top: 0;
+  }
 }
