--- a/development/frontend/src/pages/pet/css/PetProfile.css
+++ b/development/frontend/src/pages/pet/css/PetProfile.css
@@ -10,10 +10,17 @@
     width: 100px;
     height: 100px;
 }
+.pet-introduction{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 10vmin;
+}
 .pet-profile-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 6vmin;
 
 }
 .pet-profile{
@@ -24,5 +31,7 @@
     border-radius: 15px;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     color: black;
 }
