--- a/development/frontend/src/pages/LandingPage.css
+++ b/development/frontend/src/pages/LandingPage.css
@@ -1,27 +1,27 @@
 @media only screen and (min-width: 821px) {
+  .landingPageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-body {
-  display: flex;
-  justify-content: center;
-}
-  
-.my-masonry-grid {
-  border: 3px solid rgb(0, 0, 0);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-content: space-around;
-  margin: 0 6vmin 0 6vmin;
-  width: auto;
-}
+  .my-masonry-grid {
+    border: 3px solid rgb(0, 0, 0);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: space-around;
+    /* margin: 0 3vmin 0 3vmin; */
+    width: auto;
+  }
 
-.my-masonry-grid_column {
-  background-clip: padding-box;
-}
+  .my-masonry-grid_column {
+    background-clip: padding-box;
+  }
 
-.my-masonry-grid_column img {
-  width: 28vmin;
-  margin: 2vmin 0 1vmin 0;
-  border-radius: 10px;
-}
+  .my-masonry-grid_column img {
+    width: 28vmin;
+    margin: 2vmin 0 1vmin 0;
+    border-radius: 10px;
+  }
 }
