--- a/development/frontend/src/pages/pet/css/PetProfile.css
+++ b/development/frontend/src/pages/pet/css/PetProfile.css
@@ -10,6 +10,12 @@
     width: 100px;
     height: 100px;
 }
+.emtpy-pet-icon{
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    background-color: pink;
+}
 .pet-introduction{
     display: flex;
     flex-direction: column;
