--- a/development/frontend/src/pages/LandingPage.css
+++ b/development/frontend/src/pages/LandingPage.css
@@ -3,16 +3,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 3px solid rgb(255, 208, 0);
+  }
+
+  .landingPageInfiniteScroll {
+    height: 100%;
+    width: 821px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 5vmin;
+  }
+
+  .landingPageTags {
+    border: 3px solid rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
   }
 
   .my-masonry-grid {
-    border: 3px solid rgb(0, 0, 0);
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
-    /* margin: 0 3vmin 0 3vmin; */
-    width: auto;
   }
 
   .my-masonry-grid_column {
@@ -20,7 +31,7 @@
   }
 
   .my-masonry-grid_column img {
-    width: 28vmin;
+    width: 35vmin;
     margin: 2vmin 0 1vmin 0;
     border-radius: 10px;
   }
