--- a/development/frontend/src/pages/comment/css/comment.css
+++ b/development/frontend/src/pages/comment/css/comment.css
@@ -7,13 +7,24 @@ body {
   color: #2b2b2e;
 }
 
+.comment-page{
+    height: 100vh;
+}
+
+
+.comment-button-area {
+  display: flex;
+  justify-content: center;
+  height: 5vh;
+}
+
 .comment-button-area > button {
   background-color: #f2968f;
   color: #fcfcfc;
-  border-radius: 16px;
+  border-radius: 15px;
   border: 1px solid rgba(0, 0, 0, 0.08);
   margin: 3px;
-  height: 35px;
+  
 }
 
 .comment-button-area > button:hover {
@@ -21,9 +32,10 @@ body {
 }
 
 .comment-body {
-  height: 100%;
+  height: 80vh;
   width: 100%;
-  margin: auto;
+  /* width: 100vw;
+  height: 90vh; */
   overflow: scroll;
 }
 
@@ -35,6 +47,7 @@ body {
   box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
   border-radius: 15px;
 }
+
 
 .comment-card {
   height: 100%;
@@ -62,12 +75,24 @@ body {
 
 .comment-detail {
   width: 60%;
-  padding: 2%;
+
+  padding: 0 2%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
 }
+
+.comment-detail-first {
+  font-size: 15px;
+}
+
+.comment-detail-second {
+  font-size: 10px;
+  margin-bottom: 10px;
+}
+
+
 
 .comment-detail > div {
   display: flex;
@@ -83,6 +108,7 @@ body {
 
 .comment-detail-user {
   margin: 10px;
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -99,6 +125,7 @@ body {
 .comment-detail-button {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .comment-edit-button {
@@ -222,6 +249,12 @@ body {
   align-items: center;
 }
 
+.comment-create-form-second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .comment-error-area {
   height: 20px;
 }
@@ -247,6 +280,12 @@ body {
 .comment-edit-oldImage {
   margin: 2%;
   border-radius: 10px;
+}
+
+.comment-edit-form-second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .comment-image-update {
@@ -276,12 +315,12 @@ body {
 }
 
 .comment-upload-button {
-    background-color: #e0cdff;
-    font-size: 15px;
-    color: #7c699b;
-    border-radius: 30px;
-    height: 20px;
-    padding: 6px 14px 7px;
-    gap: 10px;
-    margin-bottom: 10px;
-  }
+  background-color: #e0cdff;
+  font-size: 15px;
+  color: #7c699b;
+  border-radius: 30px;
+  height: 20px;
+  padding: 6px 14px 7px;
+  gap: 10px;
+  margin-bottom: 10px;
+}
