Update landing page css

--- a/development/frontend/src/components/Footer.css
+++ b/development/frontend/src/components/Footer.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 821px) {
   .footer {
     background-color: aliceblue;
-    border: 2px solid rgb(255, 247, 0);
+    /* border: 2px solid rgb(255, 247, 0); */
     height: 8%;
     width: 821px;
     position: fixed;
