--- a/development/frontend/src/components/Footer.css
+++ b/development/frontend/src/components/Footer.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 821px) {
   .footer {
-    background-color: aliceblue;
+    background-color: rgb(43, 156, 255);
     /* border: 2px solid rgb(255, 247, 0); */
-    height: 8%;
+    height: 7vh;
     width: 821px;
     position: fixed;
     bottom: 0;
@@ -13,6 +13,36 @@
   }
 }
 
-.footer {
-  height: 8vh;
+/* ----------------------------- Laptop Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .footer {
+    background-color: rgb(43, 156, 255);
+    /* border: 2px solid rgb(255, 247, 0); */
+    height: 5vh;
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 4vmin;
+    font-style: white !important;
+  }
+}
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+
+@media only screen and (max-width: 767px) {
+  .footer {
+    background-color: rgb(43, 156, 255);
+    /* border: 2px solid rgb(255, 247, 0); */
+    height: 7vh;
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 5vmin;
+    font-style: white !important;
+  }
 }
