--- a/development/frontend/src/components/Header.css
+++ b/development/frontend/src/components/Header.css
@@ -1,10 +1,12 @@
 @media only screen and (min-width: 821px) {
   .header {
-    background-color: aliceblue;
     /* border: 2px solid rgb(255, 0, 144); */
-    height: 8%;
+    background-color: rgb(128, 196, 255);
+    height: 7vh;
     width: 821px;
-    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     top: 0;
   }
 
@@ -12,7 +14,7 @@
     /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
     justify-content: flex-end;
-    font-size: 3vmin;
+    font-size: 4vmin;
   }
 
   .logoutCard {
@@ -20,9 +22,9 @@
     border: 2px solid rgb(0, 0, 0);
     border-radius: 15px;
     position: absolute;
-    top: 15%;
-    right: 10%;
-    width: 30%;
+    top: 7.5vh;
+    right: 23.5vw;
+    width: 18%;
     height: 500px;
     display: flex;
     justify-content: center;
@@ -30,6 +32,74 @@
   }
 }
 
-.header {
-  height: 7vh;
-} 
+/* ----------------------------- Laptop Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .header {
+    /* border: 2px solid rgb(255, 0, 144); */
+    background-color: rgb(128, 196, 255);
+    height: 5vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    top: 0;
+  }
+
+  .logOut {
+    /* border: 2px solid rgb(68, 19, 47); */
+    display: flex;
+    justify-content: flex-end;
+    font-size: 3vmax;
+  }
+
+  .logoutCard {
+    background-color: aliceblue;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    position: absolute;
+    top: 5.5vh;
+    right: 0.6vw;
+    width: 30vw;
+    height: 45vh;
+    display: flex;
+    justify-content: center;
+    z-index: 1000000;
+  }
+}
+
+/* -----------------------------  Phone Ver. ----------------------------- */
+
+@media only screen and (max-width: 767px) {
+  .header {
+    /* border: 2px solid rgb(255, 0, 144); */
+    background-color: rgb(128, 196, 255);
+    height: 6vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    top: 0;
+  }
+
+  .logOut {
+    /* border: 2px solid rgb(68, 19, 47); */
+    display: flex;
+    justify-content: flex-end;
+    font-size: 3vmax;
+  }
+
+  .logoutCard {
+    background-color: aliceblue;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    position: absolute;
+    top: 6.6vh;
+    right: 1vw;
+    width: 50vw;
+    height: 45vh;
+    display: flex;
+    justify-content: center;
+    z-index: 1000000;
+  }
+}
