--- a/development/frontend/src/pages/LandingPage.css
+++ b/development/frontend/src/pages/LandingPage.css
@@ -12,8 +12,6 @@
     width: 821px;
     display: flex;
     flex-direction: column;
-
-    padding-top: 5vmin;
   }
 
   .landingPageTags {
@@ -21,7 +19,7 @@
     display: flex;
     justify-content: center;
     position: sticky;
-    top: 6%;
+    top: 0;
     z-index: 1;
   }
 
@@ -35,12 +33,59 @@
     /* background-clip: padding-box; */
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   .my-masonry-grid_column img {
-    width: 16vw;
+    width: 95%;
     margin-top: 3vmin;
+    margin-left: 1vmin;
+    border-radius: 10px;
+  }
+}
+
+/* ----------------------------- Laptop Ver. ----------------------------- */
+
+@media only screen and (max-width: 820px) {
+  .landingPageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border: 3px solid rgb(255, 208, 0); */
+  }
+
+  .landingPageInfiniteScroll {
+    border: 1px solid rgb(0, 0, 0);
+    height: 90vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .landingPageTags {
+    background-color: azure;
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+
+  .my-masonry-grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .my-masonry-grid_column {
+    /* background-clip: padding-box; */
+    display: flex;
+    flex-direction: column;
+  }
+
+  .my-masonry-grid_column img {
+    width: 95%;
+    margin-top: 3vmin;
+    margin-left: 1vmin;
     border-radius: 10px;
   }
 }
