userprofile and pet related css ver 1.1

--- a/development/frontend/src/pages/pet/css/PetProfile.css
+++ b/development/frontend/src/pages/pet/css/PetProfile.css
@@ -1,43 +1,75 @@
-.pet-card{
-    width: 90vw;
-    height: 15vh;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 4vmin;
+.pet-profile-page {
+  height: 86vh;
 }
-.pet-icon{
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-}
-.emtpy-pet-icon{
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-color: pink;
-}
-.pet-introduction{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 10vmin;
-}
-.pet-profile-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 6vmin;
 
-}
-.pet-profile{
-    margin: 15px;
-    width: 80vw;
-    height: 15vh;
-    box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
-    border-radius: 15px;
+.pet-card-container{
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: center;
-    color: black;
+}
+
+.pet-card {
+  height: 15vh;
+  width: 85vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #f7f1f0;
+  box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.2);
+  border-radius: 30px;
+  margin: 2%;
+}
+
+.pet-icon {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.empty-pet-icon {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  background-color: #f0dcda;
+}
+
+.pet-introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pet-info-name {
+  font-size: 10vmin;
+  font-weight: 230;
+}
+
+.pet-info-age {
+    background-color: #e0cdff;
+    border-radius: 30px;
+    font-size: 15px;
+    height: 20px;
+    padding: 6px 14px 7px;
+    color: #7c699b;
+    margin: 10px;
+}
+
+.pet-profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 6vmin;
+}
+
+.pet-profile {
+  margin: 15px;
+  width: 80vw;
+  height: 15vh;
+  box-shadow: 0px 4px 16px rgba(0, 38, 82, 0.1);
+  border-radius: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: #2b2b2e;
+  font-weight: 150;
 }
