--- a/development/frontend/src/components/Footer.css
+++ b/development/frontend/src/components/Footer.css
@@ -34,15 +34,23 @@
 
 @media only screen and (max-width: 767px) {
   .footer {
-    background-color: rgb(43, 156, 255);
+    background-color: #f0dcda;
     /* border: 2px solid rgb(255, 247, 0); */
-    height: 7vh;
+    height: 8vh;
     width: 100vw;
     position: fixed;
     bottom: 0;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;;
     font-size: 5vmin;
     font-style: white !important;
+    border-radius: 30px;
   }
+  .footer >div {
+    display: flex;
+    justify-content: center;
+    height: 80%;
+    width: 13%;
+  } 
 }
