--- a/development/frontend/src/pages/InitialLanding.css
+++ b/development/frontend/src/pages/InitialLanding.css
@@ -2,12 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,400;1,700&display=swap");
 
 @media only screen and (min-width: 821px) {
-  body {
+  /* body {
     background-color: #f7f1f0;
     color: #2b2b2e;
     display: flex;
     justify-content: center;
-  }
+  } */
 
   .initialLandingContainer {
     border: 2px solid black;
