--- a/development/frontend/src/pages/InitialLanding.css
+++ b/development/frontend/src/pages/InitialLanding.css
@@ -2,9 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,400;1,700&display=swap");
 
 @media only screen and (min-width: 821px) {
-  /* body {
-    background-color: #f7f1f0;
-    color: #2b2b2e;
+  .initialLandingBox {
+    display: flex;
+    justify-content: center;
   }
 
   .initialLandingContainer {
@@ -21,8 +21,8 @@
 
   .initialLandingTitleArea {
     /* border: 5px solid rgb(0, 0, 0); */
-    color: white;
     /* font-family: "Josefin Sans", sans-serif; */
+    color: white;
     font-family: "Source Code Pro", monospace;
     font-size: 10vmin;
     position: relative;
