--- a/development/frontend/src/pages/pet/css/Vaccine.css
+++ b/development/frontend/src/pages/pet/css/Vaccine.css
@@ -30,6 +30,7 @@
     /* border: 5px solid black; */
     background-color: #e0cdff;
     color: #7c699b;
+    border-radius: 30px;
 }
 .upload-vaccine-button{
     font-size: 5vmin;
